--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #304352;
-$secondary-color: #d7d2cc;
+$primary-color: #283048;
+$secondary-color: #859398;
 
 $white-color: #fff;
 
