--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #283048;
-$secondary-color: #859398;
+$primary-color: #16222A;
+$secondary-color: #3A6073;
 
 $white-color: #fff;
 
